2004-01-23  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: missing \0 on short msg replies (closes: broken SIZE command)
	* bugfix: wrong locking query method used (visual)
	* bugfix: wrong length showed in log for empty files
	* bugfix: files not locked during upload
	* bugfix: files opened in wrong memory space for upload (visual)
	* bugfix: wzd_cache_gets no working for oneliners (closes: site msg
	show not working for one-line messages).

2004-01-21  Pierre Chifflier  <pollux@wzdftpd.net>

	* visual: fix build for release version
	* visual: removed some warnings

2004-01-19  Pierre Chifflier  <pollux@wzdftpd.net>

	* visual: locking files routines

2004-01-15  Pierre Chifflier  <pollux@wzdftpd.net>

	* visual: added tools

2004-01-12  Pierre Chifflier  <pollux@wzdftpd.net>

	* ipv6: fix ip formatting in log file

2004-01-08  Pierre Chifflier  <pollux@wzdftpd.net>

	* visual: fix build, IPv6 code compiles (though win2k does not support ipv6)
	* visual: clean up threads when client exit

2004-01-07  Pierre Chifflier  <pollux@wzdftpd.net>

	* wzd_misc.c: fix incorrect free space size reported
	* wzd_socket.c: change socket_connect() to accept IPv6
	* wzd_ClientThread.c: implementation of EPRT (IPv6)
	* wzd_ServerThread.c: ident connection use same net family as control
        connection (IPv6)
	* configure.in: check for function inet_pton() and provides
        replacement code if necessary

2004-01-06  Pierre Chifflier  <pollux@wzdftpd.net>

	* cookies: msg delete (remove dir_message)
	* cookies: msg convert (rename a file to dir_message)
	* cookies: msg new (replace dir_message with given line)
	* cookies: msg append (append given line to dir_message)
	* wzd_crc32.c: generate CRC32 on file portion
	* wzd_md5.c: generate MD5 on file portion
	* bugfix: XCRC / XMD5 without arg made server crash
	* configure.in: WZD_VERSION_STR created at ./configure time and uses
        autoconf macros

2003-12-27  Pierre Chifflier  <pollux@wzdftpd.net>
