@@ -30,7 +30,7 @@ int socket_close(int sock);
 
 int socket_accept(int sock, unsigned char *remote_host, unsigned int *remote_port);
 
-int socket_connect(void * remote_host, int family, int remote_port, int localport, int fd, unsigned int timeout);
+int socket_connect(unsigned char * remote_host, int family, int remote_port, int localport, int fd, unsigned int timeout);
 
 /* Returns remote/local port number for the current connection. */
 int socket_get_remote_port(int sock);
@@ -39,7 +39,7 @@ int socket_get_local_port(int sock);
 /* wait for socket to be ready for read/write, for timeout seconds max
  * return 0 if ok, 1 if timeout, -1 on error
  */
-int socket_wait_to_read(int sock, int timeout);
-int socket_wait_to_write(int sock, int timeout);
+int socket_wait_to_read(unsigned int sock, int timeout);
+int socket_wait_to_write(unsigned int sock, int timeout);
 
 #endif /* __WZD_SOCKET__ */
